--- a/Admin.html
+++ b/Admin.html
@@ -21,7 +21,7 @@
     </div> -->
     <div>
         <form class="sign">
-            <img src="/image/PlugAndPlay.jpg" alt="" style="width: 130px;">
+            <img src="./image/PlugAndPlay.jpg" alt="" style="width: 130px;">
             <input type="text" required placeholder="First name"> 
             <br>
             <input type="text" required placeholder="Last name">
