--- a/adminTable.html
+++ b/adminTable.html
@@ -21,7 +21,7 @@
             <tr>
                 <td>
                     <div class="cartinfo">
-                        <img src="/image/plini.png" alt="plini">
+                        <img src="./image/plini.png" alt="plini">
                         <div>
                             <small><input type="text" required placeholder="name " style="width: 150px;"></small> <br> 
                             <small><input type="text" required placeholder="Discription" style="width: 100px; height: 10vh;"></td></small> 
@@ -36,7 +36,7 @@
             <tr>
                 <td>
                     <div class="cartinfo">
-                        <img src="/image/cory wong.png" alt="corywong">
+                        <img src="./image/cory wong.png" alt="corywong">
                         <div>
                             <small><input type="text" required placeholder="name" style="width: 150px;"></small> <br> 
                             <small><input type="text" required placeholder="Discription" style="width: 100px; height: 10vh;"></td></small>
@@ -50,7 +50,7 @@
             </tr>
             <td>
                 <div class="cartinfo">
-                    <img src="/image/gojira.png" alt="helix lt">
+                    <img src="./image/gojira.png" alt="helix lt">
                     <div>
                         <small><input type="text" required placeholder="name " style="width: 150px;"></small> <br> 
                         <small><input type="text" required placeholder="Discription" style="width: 100px; height: 10vh;"></small>
