--- a/projectzeroABOUT.html
+++ b/projectzeroABOUT.html
@@ -13,7 +13,7 @@
     <!-- <div class="aboutus"> -->
     <div class="navbar">
         <!-- <div class="logo">
-            <img src="/image/projectzero logo.jpg" alt="logo">
+            <img src="./image/projectzero logo.jpg" alt="logo">
         </div> -->
         <nav>
             <a href="index.html">Home</a>
@@ -26,7 +26,7 @@
      <!-- First layout -->
      <div class="aboutparent">
         <div class="firstabout">
-            <img src="/image/PlugAndPlay.jpg" alt="logo">
+            <img src="./image/PlugAndPlay.jpg" alt="logo">
             <p class="paraabout">One of the most cutting-edge pedals and digital plug-ins available from Plug and Play aids musicians <br>
                  in finding their tonality. We offer one of the top plugins at a competitive price. <br>
                   We also provide one of the most powerful and limitless floor modelers on the market right now. <br>
@@ -39,32 +39,32 @@
             <h1>Our Endorsed Artists</h1>
             <div class="aboutrow">
         <div class="secondabout">
-            <img src="/image/ridesh.jpg" alt="" >
+            <img src="./image/ridesh.jpg" alt="" >
             <h3>Ridesh Tamang</h3>
             <p>Rock Heads</p>
         </div>
         <div class="secondabout">
-            <img src="/image/sunny.jpg" alt="" >
+            <img src="../image/sunny.jpg" alt="" >
             <h3>Sunny Tuladhar</h3>
             <p>Jindabaad</p>
         </div>
         <div class="secondabout">
-            <img src="/image/pravesh.jpg" alt="" >
+            <img src="./image/pravesh.jpg" alt="" >
             <h3>Pravesh Thapa Magar</h3>
             <p>Pariwartan</p>
         </div>
         <div class="secondabout">
-            <img src="/image/suncha.jpg" alt="" >
+            <img src="./image/suncha.jpg" alt="" >
             <h3>Suncha Vox</h3>
             <p>Albratross</p>
         </div>
         <div class="secondabout">
-            <img src="/image/matus.jpg" alt="" >
+            <img src="./image/matus.jpg" alt="" >
             <h3>Mateus Asato</h3>
             <p>Jessie J And The Band</p>
         </div>
         <div class="secondabout">
-            <img src="/image/rojib .jpg" alt="" >
+            <img src="./image/rojib .jpg" alt="" >
             <h3>Rojib  Charvel</h3>
             <p>Space Nepal</p>
         </div>
@@ -76,13 +76,13 @@
     <div class="leftfooter">
         <h2 class="ft">Download Our App</h2>
         <p class="ft">Download our app on android and IOS</p>
-        <img src="/image/andriod.jpg" alt="">
-        <img src="/image/ios.jpg" alt="">
+        <img src="./image/andriod.jpg" alt="">
+        <img src="./image/ios.jpg" alt="">
         <p class="copyright">Copyright 2023 - PlugAndPlay</p>
         
     </div>
     <hr>
-    <img src="/image/PlugAndPlay.jpg" alt="" class="footerimg">
+    <img src="./image/PlugAndPlay.jpg" alt="" class="footerimg">
     <i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;padding: 10px;"></i>
     <i class="fa-brands fa-facebook fa-xl" style="color: #fcfcfc;padding: 10px;"></i>
     <i class="fa-brands fa-twitter fa-xl" style="color: #ffffff;padding: 10px;"></i>
