--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
     <div class="navbar">
         <!-- <div class="logo">
-            <img src="/image/projectzero logo.jpg" alt="logo">
+            <img src="./image/projectzero logo.jpg" alt="logo">
         </div> -->
         <nav>
             <a href="index.html">Home</a>
@@ -34,7 +34,7 @@
         <button class="btn1"><a href="projectzeroPRODUCT.html">Check out our products &#8594; </a></button>
     </div>
     <div class="firstpic">
-        <img src="/image/projectzero1.jpg" alt="image">
+        <img src="./image/projectzero1.jpg" alt="image">
     </div>
 </div>
 </div>
@@ -43,7 +43,7 @@
         <h1>Product we sell</h1>
         <div class="secflex">
             <div class="secchild">
-                <img src="/image/product1.jpg" alt="product">
+                <img src="./image/product1.jpg" alt="product">
                 <div class="secoverlay">
                 <div class="seccontent">
                     <h2>DAWS</h2>
@@ -51,7 +51,7 @@
             </div>
             </div>
             <div class="secchild">
-                <img src="/image/product2.jpg" alt="product">
+                <img src="./image/product2.jpg" alt="product">
                 <div class="secoverlay">
                     <div class="seccontent">
                         <h2>PLUGINS</h2>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="secchild">
-                <img src="/image/product3.jpg" alt="product">
+                <img src="./image/product3.jpg" alt="product">
                 <div class="secoverlay">
                     <div class="seccontent">
                         <h2>DIGITAL PEDALS</h2>
@@ -73,7 +73,7 @@
     <h1 class="headthird">Our top seller</h1>
     <div class="thirdflex">
         <div class="thirdleft">
-            <img src="/image/quad.jpg" alt="quadcortex">
+            <img src="./image/quad.jpg" alt="quadcortex">
         </div>
     <div class="thirdright">
         <h2>Quad Cortex</h2>
@@ -99,7 +99,7 @@
             <button class="btn3"> <a href="projectzeroPRODUCT.html"  style="color: white; font-weight: 500;"> Buy now</a></button>
         </div>
         <div class="fourthright">
-            <img src="/image/plini.jpg" alt="Archetype Plini">
+            <img src="./image/plini.jpg" alt="Archetype Plini">
         </div>
     </div>
 </div>
@@ -108,13 +108,13 @@
     <div class="leftfooter">
         <h2 class="ft">Download Our App</h2>
         <p class="ft">Download our app on android and IOS</p>
-        <img src="/image/andriod.jpg" alt="android">
-        <img src="/image/ios.jpg" alt="ios">
+        <img src="./image/andriod.jpg" alt="android">
+        <img src="./image/ios.jpg" alt="ios">
         <p class="copyright">Copyright 2023 - PlugAndPlay</p>
         
     </div>
     <hr>
-    <img src="/image/PlugAndPlay.jpg" alt="plugandplay" class="footerimg">
+    <img src="./image/PlugAndPlay.jpg" alt="plugandplay" class="footerimg">
     <i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;padding: 10px;"></i>
     <i class="fa-brands fa-facebook fa-xl" style="color: #fcfcfc;padding: 10px;"></i>
     <i class="fa-brands fa-twitter fa-xl" style="color: #ffffff;padding: 10px;"></i>
