--- a/projectzerocart.html
+++ b/projectzerocart.html
@@ -12,7 +12,7 @@
 <body>
     <div class="navbar">
         <!-- <div class="logo">
-            <img src="/images/projectzero logo.jpg" alt="logo">
+            <img src="./images/projectzero logo.jpg" alt="logo">
         </div> -->
         <nav>
             <a href="index.html">Home</a>
@@ -33,7 +33,7 @@
             <tr>
                 <td>
                     <div class="cartinfo">
-                        <img src="/image/plini.png" alt="plini">
+                        <img src="./image/plini.png" alt="plini">
                         <div>
                             <p>Archetype:Plini</p>
                             <small>Price: Rs 30,000</small>
@@ -49,7 +49,7 @@
             <tr>
                 <td>
                     <div class="cartinfo">
-                        <img src="/image/cory wong.png" alt="corywong">
+                        <img src="./image/cory wong.png" alt="corywong">
                         <div>
                             <p>Archetype:Cory Wong</p>
                             <small>Price: Rs 30,000</small>
@@ -64,7 +64,7 @@
             </tr>
             <td>
                 <div class="cartinfo">
-                    <img src="/image/gojira.png" alt="helix lt">
+                    <img src="./image/gojira.png" alt="helix lt">
                     <div>
                         <p>Archetype:Gorjira</p>
                         <small>Price: Rs 20,000</small>
@@ -102,13 +102,13 @@
     <div class="leftfooter">
         <h2 class="ft">Download Our App</h2>
         <p class="ft">Download our app on android and IOS</p>
-        <img src="/images/andriod.jpg" alt="">
-        <img src="/images/ios.jpg" alt="">
+        <img src="./images/andriod.jpg" alt="">
+        <img src="./images/ios.jpg" alt="">
         <p class="copyright">Copyright 2023 - PlugAndPlay</p>
         
     </div>
     <hr>
-    <img src="/images/PlugAndPlay.jpg" alt="" class="footerimg">
+    <img src="./images/PlugAndPlay.jpg" alt="" class="footerimg">
     <i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;padding: 10px;"></i>
     <i class="fa-brands fa-facebook fa-xl" style="color: #fcfcfc;padding: 10px;"></i>
     <i class="fa-brands fa-twitter fa-xl" style="color: #ffffff;padding: 10px;"></i>
