--- a/projectzeroABOUT.html
+++ b/projectzeroABOUT.html
@@ -44,7 +44,7 @@
             <p>Rock Heads</p>
         </div>
         <div class="secondabout">
-            <img src="../image/sunny.jpg" alt="" >
+            <img src="./image/sunny.jpg" alt="" >
             <h3>Sunny Tuladhar</h3>
             <p>Jindabaad</p>
         </div>
